# smugmug-actions

./: LICENSE  README.md  app.py  lambda.yaml  lambda_function.py  pyproject.toml  smugmug-create-album.yaml
.github/workflows/: main.yml
cfn/: smugmug-create-album.yaml
smugmug_actions/: album.py  auth.py  handler.py  image.py  log.py  mail.py  upload.py
smugmug_create_album/: handler.py  smugmug_create_album_stack.py
tests/unit/: test_smugmug_create_album_stack.py
