[tool.poetry]
name = "smugmug_create_album"
version = "0.1.0"
description = "Example AWS Lambda Function using Poetry"
authors = ["jcable <julian.cable@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
smugpy = "^0.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

