[tool.poetry]
name = "smugmug_actions"
version = "0.1.0"
description = "Example AWS Lambda Function using Poetry"
authors = ["jcable <julian.cable@yahoo.com>"]
packages = [{include = "smugmug_actions"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
requests-oauthlib = "^2.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

